--- a/framework/chroma_vqgan/configs/testing.yaml
+++ b/framework/chroma_vqgan/configs/testing.yaml
@@ -3,12 +3,12 @@ name: vqgan
 log_dir: logs/vqgan_testing
 
 model:
-  embed_dim: 128
+  embed_dim: 512
   n_embed: 4096
-  lr_decay: [3, 0.1]
+  lr_decay: [100, 1.0]
   ddconfig:
     double_z: False
-    z_channels: 128
+    z_channels: 512
     resolution: 256
     in_channels: 3
     out_ch: 3
@@ -21,11 +21,10 @@ model:
 loss:
   disc_conditional: False
   disc_in_channels: 3
-  disc_start: 0
+  disc_start: 501
   disc_weight: 0.8
   codebook_weight: 1.0
   perceptual_weight: 1.0
-  vgg16_path: Null
 
 data:
   train:
@@ -33,22 +32,22 @@ data:
     batch_size: 6
     resolution: [256, 256]
     datapath: '/home/huangzhitong/dataset/coco'
-    num_workers: 0
+    num_workers: 18
     meta_files: ['train2017_meta.json', 'unlabeled2017_meta.json']
   val:
     split: 'val'
     batch_size: 6
     resolution: [256, 256]
     datapath: '/home/huangzhitong/dataset/coco'
-    num_workers: 0
+    num_workers: 18
     meta_files: ['val2017_meta.json']
 
 train:
   steps: 5000000
   log_steps: 1
   ckpt_steps: 10000
-  base_learning_rate: 3.2e-6
+  base_learning_rate: 3.2e-5
   accumulate_grad_batches: 1
-  gpus: [2]
+  gpus: [0, 1, 2]
   precision: 16  # can be 16 or 32
   from_checkpoint: Null
