--- a/env.yaml
+++ b/env.yaml
@@ -1,18 +1,31 @@
 name: unicolor
 channels:
   - pytorch
+  - nvidia
   - defaults
 dependencies:
   - python=3.7.13
   - pip=22.2
-  - cudatoolkit=11.1.74
-  - pytorch=1.8.2
-  - torchvision=0.9.2
+  - cudatoolkit=11.3
+  - pytorch=1.8.0
+  - torchvision
   - numpy=1.21.5
   - pip:
-    PyYAML=5.4.1
-    Pillow=9.2.0
-    pytorch-lightning=1.3.7.post0
-    opencv-contrib-python=4.6.0.66
-    kornia=0.5.11
-    requests=2.28.1
+    - PyYAML=5.4.1
+    - Pillow=9.2.0
+    - pytorch-lightning=1.3.7.post0
+    - opencv-contrib-python=4.6.0.66
+    - kornia=0.5.11
+    - requests=2.28.1
+    - tqdm>=4.23.0
+    - scipy==1.2
+    - torchsummary>=1.3
+    - matplotlib>=2.2.2
+    - scikit_image>=0.15.0
+    - torchviz>=0.0.1
+    - easydict
+    - prefetch_generator
+    - tensorboard
+    - future
+    - numba
+    - pypng
