--- a/env.yaml
+++ b/env.yaml
@@ -11,12 +11,12 @@ dependencies:
   - torchvision
   - numpy=1.21.5
   - pip:
-    - PyYAML=5.4.1
-    - Pillow=9.2.0
-    - pytorch-lightning=1.3.7.post0
-    - opencv-contrib-python=4.6.0.66
-    - kornia=0.5.11
-    - requests=2.28.1
+    - PyYAML==5.4.1
+    - Pillow==9.2.0
+    - pytorch-lightning==1.3.7.post0
+    - opencv-contrib-python==4.6.0.66
+    - kornia==0.5.11
+    - requests==2.28.1
     - tqdm>=4.23.0
     - scipy==1.2
     - torchsummary>=1.3
@@ -29,3 +29,4 @@ dependencies:
     - future
     - numba
     - pypng
+    - nltk
