--- a/environment.yaml
+++ b/environment.yaml
@@ -7,7 +7,7 @@ dependencies:
   - python=3.7.13
   - pip=22.2
   - cudatoolkit=11.3
-  - pytorch=1.8.0
+  - pytorch-cuda=11.6
   - torchvision
   - numpy=1.21.5
   - pip:
@@ -31,3 +31,6 @@ dependencies:
     - pypng
     - nltk
     - torchmetrics==0.5
+    - ftfy
+    - regex
+    - git+https://github.com/openai/CLIP.git
